<resources>
    <string name="app_name">Hellschedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">강호동</string>
    <string name="nav_header_subtitle">software123@gc.gachon.ac.kr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hellschedule">Hellschedule</string>

    <string name="menu_manual">Manual</string>
    <string name="menu_policy">Policy</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_help">Help</string>
    <string name="menu_github">GitHub</string>
    <string name="menu_developer">Developer</string>
    <string name="menu_email">E-mail</string>
    <string name="menu_start">Start</string>

    <string name="dev1_name">Moon Seong Hoon</string>
    <string name="dev2_name">Park Ki Seong</string>
    <string name="dev3_name">Bae Tae Won</string>
    <string name="dev4_name">Choi Han Bin</string>
    <string name="major">Gachon Univ. Software Dept.</string>
    <string name="dev1_email">foxtail96@naver.com</string>
    <string name="dev2_email">96sean@naver.com</string>
    <string name="dev3_email">gerrard1283@naver.com</string>
    <string name="dev4_email">wkghskak@naver.com</string>
    <string name="dev1_git">https://github.com/seonghoonmoon</string>
    <string name="dev2_git">https://github.com/kiseongpark</string>
    <string name="dev3_git">https://github.com/taewonbae</string>
    <string name="dev4_git">https://github.com/hanbinchoi</string>

    <string name="policy_title">이용약관 및 규정</string>
    <string name="policy1">제1조(목적)</string>
    <string name="policy2">제2조(정의)</string>
    <string name="policy3">제3조(책임)</string>
    <string name="policy4">제4조(권리)</string>
    <string name="policy1_text">이 약관은 가천대학교 모바일 프로그래밍 수업, 텀 프로젝트의 결과물인
어플리케이션(이하 "앱"이라 한다.)에서 제공하는 YouTube, Web 관련 서비스(이하
"서비스"라 한다)를 이용함에 있어 개발자 및 사용자의 권리의무 및 책임사항을
규정함을 목적으로 합니다.</string>
    <string name="policy2_text1">1. "앱"이란 HellSchedule 개발자가 제공하는 어플리케이션으로, YouTube,
Web을 이용한 서비스를 포함하고 있습니다.</string>
    <string name="policy2_text2">
        2. "사용자"란 "앱"을 설치하고 실행한 모든 자를 말하며 "개발자"에게 아무런 정보를
제공하지 않습니다.</string>
    <string name="policy2_text3">
        3. "개발자"란 가천대학교 소프트웨어학과 3학년 학생이거나 Github에 HellSchedule
"앱" 프로젝트에 Contribute를 한 자를 말합니다.</string>
    <string name="policy2_text4">
        4. "서비스"란 YouTube 운동 관련 영상제공, 웹 쇼핑기능, 데이터베이스를 이용한 운동 정보 제공 등을 말합니다.
    </string>
    <string name="policy3_text">이 "앱"은 구글의 YouTube API를 이용하여 운동 관련 영상을 제공합니다. 그리고 "개발자"는 "사용자"의 "앱"을 통해 얻은 정보에
대한 맹신으로 얻은 피해에 대해 어떠한 책임을 지지 않음을 알립니다.</string>
    <string name="policy4_text">모든 "사용자" 및 "개발자"는 Github라는 오픈소스 커뮤니티에 제공되는 이 "앱"에
대해 직접 의견을 내거나 코드를 작성하는 것이 가능합니다.</string>
    <string name="policy5_text">https://github.com/hanbinchoi/HellSchedule</string>

    <string name="bmi_result1">BMI 측정 결과 값을 바탕으로</string>
    <string name="bmi_result2">본인 체형에 적합한 운동루틴을 선택하세요!!</string>

    <string name="diet_management1">원하시는 식단표를 눌러보세요!</string>
    <string name="diet_management2">버튼 클릭시 해당 식단표가 아래 출력됩니다.</string>

    <string name="manual_title">매뉴얼</string>
    <string name="manual1">1. 운동 루틴 추천</string>
    <string name="manual2">2. BMI 측정</string>
    <string name="manual3">3. 식단 관리</string>
    <string name="manual4">4. 산책로 추천</string>
    <string name="manual5">5. Stopwatch</string>
    <string name="manual6">6. Search</string>
    <string name="manual7">7. Shop</string>
    <string name="manual1_text">목표하는 체형을 선택하여 운동 루틴 데이터 중 원하는 운동을
선택하여 관련 영상 및 방법 권장 세트 등을 알 수 있다.</string>
    <string name="manual2_text">정보 입력 후 버튼 클릭하면 자신의 bmi 를 알 수 있다.
그렇게 구한 자신의 BMI에 따른 운동 루틴을 선택 가능하다.</string>
    <string name="manual3_text">자신의 신체 정보 입력 후 버튼 클릭한다. 그 후 본인이 먹은 음식 칼로리/
        수행한 운동 칼로리 검색이 가능하며 체형(BMI)별 하루 권장 칼로리 표시 기능이 추가되어있다.</string>
    <string name="manual4_text">원하는 산책 테마 설정 이후 원하는 산책코스 선택이 가능하다.</string>
    <string name="manual5_text">운동 세트 진행 후 휴식 시간 설정 기능이 있다.</string>
    <string name="manual6_text">운동 루틴 DB에 있는 루틴 검색으로 원하는 운동을 바로 검색 할 수 있다.</string>
    <string name="manual7_text">운동 용품 구매 사이트와 연동하여 자신이 구매하고자하는 운동 용품 및 보충제 등을 구매할 수 있다.</string>

    <string name="help_title">개발에 도움을 준 사이트</string>
    <string name="help1">1. 운동 루틴 관련</string>
    <string name="help2">2. 참고 사이트</string>
    <string name="help_text1">사람마다 운동하는 방법이 다르고 운동루틴이 정해진 사이트가
없기 때문에 헬스케쥴은 최대한 신뢰할 수 데이터를 제공해주기 위해
운동쪽에서 최정상의 자리에 있는 강경원 선수의 블로그와 유튜브에서
주로 운동정보를 참고하였으며, 그 외 운지기, 키다리아저씨, 피지컬갤러리 등에서
운동 방법 등을 참고하였습니다.</string>
    <string name="help_text2">Data : https://www.youtube.com/channel/UCuwyPNJScQ5luAV7b8juFfg</string>
    <string name="help_text3">Data : https://www.youtube.com/channel/UChWJavW1PbvAkPTcB06EeIg</string>
    <string name="help_text4">Data : https://www.youtube.com/channel/UCQ4eZwsMew7ZaV_HKXnQLGg</string>
    <string name="help_text5">Data : https://blog.naver.com/wc0116</string>
    <string name="help_text6">Data : https://www.youtube.com/channel/UCdtRAcd3L_UpV4tMXCw63NQ</string>
    <string name="help_text7">HealthKorea : https://www.healthkoreaus.com/mall/m_mall_list.php?ps_ctid=01000000</string>
</resources>
