<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_title"
            android:textSize="30dp"
            android:gravity="center|center_vertical"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@drawable/hellschedule_manual" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual1"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual1_text"
            android:textSize="15dp"
            android:textColor="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual2"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual2_text"
            android:textSize="15dp"
            android:textColor="@color/gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual3"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual3_text"
            android:textSize="15dp"
            android:textColor="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual4"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual4_text"
            android:textSize="15dp"
            android:textColor="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual5"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual5_text"
            android:textSize="15dp"
            android:textColor="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual6"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual6_text"
            android:textSize="15dp"
            android:textColor="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual7"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual7_text"
            android:textSize="15dp"
            android:textColor="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/hellschedule_logo1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
    </LinearLayout>
</ScrollView>