<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:title="Menu">
        <item
            android:id="@+id/nav_manual"
            android:icon="@drawable/icon_manual"
            android:title="@string/menu_manual" />
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/icon_policy"
            android:title="@string/menu_policy" />
        <item
            android:id="@+id/nav_github"
            android:icon="@drawable/icon_github"
            android:title="@string/menu_github" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_developer"
                android:icon="@drawable/icon_developer"
                android:title="@string/menu_developer" />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/icon_email"
                android:title="@string/menu_email" />
        </menu>
    </item>

</menu>
